fix: align markdown mention chips

--- a/ui/src/index.css
+++ b/ui/src/index.css
@@ -1256,7 +1256,7 @@ button[draggable="false"] {
   font-weight: 600;
   line-height: 1.3;
   text-decoration: none;
-  vertical-align: middle;
+  vertical-align: 0.5em;
   white-space: nowrap;
   user-select: none;
 }
@@ -1891,7 +1891,7 @@ a.rudder-project-mention-chip {
   font-weight: 600;
   line-height: 1.3;
   text-decoration: none;
-  vertical-align: middle;
+  vertical-align: 0.5em;
   white-space: nowrap;
 }
 
